--- a/AritmeticaAlberto/nbproject/project.properties
+++ b/AritmeticaAlberto/nbproject/project.properties
@@ -28,10 +28,10 @@ debug.test.modulepath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/Aritmetica.jar
+dist.jar=${dist.dir}/AritmeticaAlberto.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
-dist.jlink.output=${dist.jlink.dir}/Aritmetica
+dist.jlink.output=${dist.jlink.dir}/AritmeticaAlberto
 excludes=
 includes=**
 jar.compress=false
@@ -70,8 +70,8 @@ jlink.additionalmodules=
 # The jlink additional command line parameters
 jlink.additionalparam=
 jlink.launcher=true
-jlink.launcher.name=Aritmetica
-main.class=
+jlink.launcher.name=AritmeticaAlberto
+main.class=test.AritmeticaAlberto
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
